# jeco

./: .gitignore  Cargo.toml  config.yaml  plot.py  readme.md
command/: app.py  config.py
command/static/: command.js  lib.js  main.js  plotter.js  spec.js  style.css
command/templates/: index.html  layout.html
src/: agent.rs  config.rs  content.rs  control.rs  main.rs  network.rs  output.rs  rec.rs
src/model/: agent.rs  config.rs  content.rs  grid.rs  mod.rs  motive.rs  network.rs  platform.rs  policy.rs  publisher.rs  sim.rs  util.rs
