[package]
name = "jeco"
version = "0.0.1"
authors = ["Francis Tseng <f+accounts@frnsys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.0"
rand_distr = "0.2.2"
rand = "0.7.3"
nalgebra = "0.19.0"
fnv = "1.0.3"
