[package]
name = "jeco"
version = "0.0.1"
authors = ["Francis Tseng <f+accounts@frnsys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.0"
rand_distr = "0.2.2"
rand = "0.7.3"
nalgebra = { version = "0.19.0", features = ["serde-serialize"] }
fnv = "1.0.3"
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
pbr = "1.0.1"
chrono = "0.4"
redis = "0.15.1"
strum = "0.15.0"
strum_macros = "0.15.0"
